fix SelectMenu Component styles missing: arrow transition will change wrap width & menu-title missing background color

--- a/src/components/SelectMenu/styles/index.scss
+++ b/src/components/SelectMenu/styles/index.scss
@@ -34,6 +34,7 @@
     font-size: 14px;
     cursor: pointer;
     color: rgba(black, 0.65);
+    background-color: #ffffff;
     &.#{$cn-prefix}-select-menu-placeholder {
       color: $grey;
     }
@@ -44,8 +45,8 @@
     line-height: 30px;
     position: absolute;
     top: 0;
-    right: 0;
-    width: 30px;
+    right: 10px;
+    width: 20px;
     text-align: center;
     cursor: pointer;
     transition: all 0.3s ease;
